<resources>
    <string name="app_name">BOTLER</string>

    <!-- Related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_pass">Confirm password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_change_password">"Change password"</string>
    <string name="action_reset_password">"Reset password"</string>
    <string name="action_delete_account">"Delete account"</string>

    <string name="text_no_account">No account?</string>
    <string name="action_no_account">Sign up here</string>

    <string name="text_forgot_password">Forgot password?</string>
    <string name="action_forgot_password">Reset here</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="action_cancel">Cancel</string>
    <string name="month"></string>


    <!-- Related to favorites -->
    <string name="search_hint">"Search your recipes"</string>

    <!-- Messages -->
    <string name="from_botler">Botler said:</string>
    <string name="from_you">You said:</string>

    <!-- Related to menu-->
    <string name="meal_plan">MEAL PLAN</string>
    <string name="favorites">FAVORITES</string>
    <string name="settings">SETTINGS</string>
    <string name="send">SEND</string>
    <string name="recipe_bot">CHAT WITH BOTLER</string>

    <!-- Related to recipe detail -->
    <string name="instructions">Instructions</string>
    <string name="tools">Equipment</string>
    <string name="ingredients">Ingredients</string>
    <string name="summary">Summary</string>
    <string name="similar">Similar Recipes</string>


    <!-- Related to recipe type icons -->
    <string name="gluten_free">Gluten Free</string>
    <string name="dairy_free">Dairy free &amp; Lactose free</string>
    <string name="whole30">Whole30</string>
    <string name="vegan">Vegan</string>
    <string name="weight_watch">Weight Watcher</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="paleo">Paleo</string>
    <string name="organic">Organic</string>
    <string name="ketogenic">Ketogenic</string>

    <!-- Related to mealplan -->
    <string name="breakfast">Breakfast</string>
    <string name="no_mealplan">No mealplan found</string>
    <string name="dinner">Dinner</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="lunch">Lunch</string>

</resources>
