<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/meal_planner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/White"
    android:visibility="visible">


    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/compactcalendar_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:compactCalendarBackgroundColor="@color/guillotine_background"
        app:compactCalendarCurrentDayBackgroundColor="@color/Primary_Light_Light"
        app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
        app:compactCalendarDisplayOtherMonthDays="true"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="true"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextColor="@color/White"
        app:compactCalendarTextSize="12sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/month"
        android:text="@string/month"
        android:gravity="center_horizontal"
        android:layout_below="@+id/compactcalendar_view"
        android:textColor="@color/Black"
        android:textSize="25dp" />

    <Button
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/compactcalendar_view"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/send_button_state"
        android:text="@string/previous" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/compactcalendar_view"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/send_button_state"
        android:text="@string/next" />

    <TextView
        android:id="@+id/noplan"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_below="@+id/prev_button"
        android:gravity="center_vertical"
        android:text="@string/no_mealplan"
        android:textAlignment="center"
        android:textColor="@color/Gray_Dark"
        android:textSize="33sp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/dayview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prev_button"
        android:layout_marginTop="5dp"
        android:overScrollMode="never"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_horizontal"
                android:text="@string/breakfast"
                android:textColor="@color/guillotine_background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_Dark" />

            <ImageView
                android:id="@+id/breakfast"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_horizontal"
                android:text="@string/lunch"
                android:textColor="@color/guillotine_background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_Dark" />

            <ImageView
                android:id="@+id/lunch"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_horizontal"
                android:text="@string/dinner"
                android:textColor="@color/guillotine_background_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/Gray_Dark" />

            <ImageView
                android:id="@+id/dinner"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>